# general_video_clone

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: pipeline.chengyu.json  pipeline.dahuaxiyou.json  pipeline.jiangbanya.json  pipeline.meipocat.json  pipeline.openrouter.example.json  pipeline.thincat.json  pipeline.tuokouxiu1.json
examples/: README.md
prompts/: step1_rewrite.txt  step2_plan.txt  step3_asset_images.txt  step3_reference_frames.txt  step4_video_segments.txt
schemas/: step1_rewrite.schema.json  step2_visual_plan.schema.json
src/video_clone_automation/: cli.py  config.py  models.py  registry.py  web.py
src/video_clone_automation/pipelines/: run_pipeline.py
src/video_clone_automation/providers/: base.py  images.py  mock.py  openrouter.py  videos.py
src/video_clone_automation/stages/: step1_script.py  step2_planning.py  step3_images.py  step4_video.py  step5_assemble.py
src/video_clone_automation/utils/: env.py  files.py  naming.py  progress.py
src/video_clone_automation/web_assets/: app.js  index.html  styles.css
