[project]
name = "video-clone-automation"
version = "0.1.0"
description = "Flexible end-to-end video clone automation scaffold"
requires-python = ">=3.11"
dependencies = ["openai>=1.30.0", "httpx>=0.27.0"]

[project.scripts]
video-clone = "video_clone_automation.cli:main"
video-clone-web = "video_clone_automation.web:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
